[gd_scene load_steps=37 format=3 uid="uid://bapw7sr4haclc"]

[ext_resource type="Script" path="res://Scene_Switcher/player/player.gd" id="1_8wmr0"]
[ext_resource type="PackedScene" uid="uid://bow40sr71gndy" path="res://Scene_Switcher/ammo/bullet.tscn" id="2_fvypt"]
[ext_resource type="Texture2D" uid="uid://b8cbsib6jkerg" path="res://Scene_Switcher/player/asset/Armelvl1.png" id="3_nww2b"]
[ext_resource type="Texture2D" uid="uid://d2kolgekwntrh" path="res://Scene_Switcher/player/asset/Armeslvl2.png" id="4_7bnte"]
[ext_resource type="Texture2D" uid="uid://e343xwn6wnju" path="res://Scene_Switcher/player/asset/cockpit.png" id="5_eb245"]
[ext_resource type="Texture2D" uid="uid://b8x6uo7qtqes3" path="res://Scene_Switcher/player/asset/Rotor1.png" id="5_thjcd"]
[ext_resource type="Texture2D" uid="uid://drhqwrt536g3m" path="res://Scene_Switcher/ammo/asset/fire_sparkles.png" id="6_ba3k0"]
[ext_resource type="Animation" uid="uid://biigdmqba2ogp" path="res://Scene_Switcher/ammo/animation/player_fire_basic.tres" id="8_8pnhb"]
[ext_resource type="Animation" uid="uid://biigdmqba4ogp" path="res://Scene_Switcher/ammo/animation/player_fire_left.tres" id="9_emuoo"]
[ext_resource type="Animation" uid="uid://biigdmqba3ogp" path="res://Scene_Switcher/ammo/animation/player_fire_right.tres" id="10_dgs86"]
[ext_resource type="Texture2D" uid="uid://bbyyuc2etb51r" path="res://Scene_Switcher/player/asset/under_sc.png" id="11_eru6p"]
[ext_resource type="Texture2D" uid="uid://dvimo15q6nm4k" path="res://Scene_Switcher/player/asset/shadow.png" id="11_jcunq"]
[ext_resource type="AudioStream" uid="uid://bgykkl3p5warj" path="res://Scene_Switcher/sound/engine-helicopter.mp3" id="11_pnbqh"]
[ext_resource type="AudioStream" uid="uid://cum2dvh0rme4p" path="res://Scene_Switcher/sound/overheat-gun.mp3" id="12_7ocwc"]
[ext_resource type="Texture2D" uid="uid://b8xcat3vb1ctl" path="res://Scene_Switcher/player/asset/bar_sc.png" id="12_gquhs"]
[ext_resource type="AudioStream" uid="uid://jxb30assr5lj" path="res://Scene_Switcher/sound/shoot_gun_1.mp3" id="12_veq1j"]
[ext_resource type="AudioStream" uid="uid://cyc64wjncn72b" path="res://Scene_Switcher/sound/shoot_gun_2.mp3" id="13_vyeq7"]
[ext_resource type="AudioStream" uid="uid://dseta55s7u7fu" path="res://Scene_Switcher/sound/shoot_gun_3.mp3" id="14_ewecj"]
[ext_resource type="AudioStream" uid="uid://v2cl7vkk5bpi" path="res://Scene_Switcher/sound/shoot_gun_4.mp3" id="15_qd2uk"]
[ext_resource type="PackedScene" uid="uid://b5j1ql6oqb6os" path="res://Scene_Switcher/enemy/enemy_explosion.tscn" id="20_lfnj5"]
[ext_resource type="Texture2D" uid="uid://c8qa45bgvehb1" path="res://Scene_Switcher/enemy/asset/vortex.png" id="21_mf2bx"]
[ext_resource type="AudioStream" uid="uid://tnta4wntf1pt" path="res://Scene_Switcher/sound/explosion.mp3" id="22_wmpp0"]

[sub_resource type="Animation" id="Animation_8tswv"]
resource_name = "RESET"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jvdsf"]
_data = {
"RESET": SubResource("Animation_8tswv"),
"player_fire_basic": ExtResource("8_8pnhb"),
"player_fire_left": ExtResource("9_emuoo"),
"player_fire_right": ExtResource("10_dgs86")
}

[sub_resource type="Gradient" id="Gradient_glqfr"]
offsets = PackedFloat32Array(0, 0.705521, 1)
colors = PackedColorArray(0.219501, 0.219501, 0.219501, 1, 0.490196, 0.490196, 0.490196, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_yho3y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cockpit_sprite/rotor_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cockpit_sprite/shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-39.3846, 22.9743)]
}

[sub_resource type="Animation" id="Animation_fkxyn"]
resource_name = "death_anim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cockpit_sprite/shadow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-39.3846, 22.9743), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_2eb17"]
resource_name = "rotor"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cockpit_sprite/rotor_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sip65"]
_data = {
"RESET": SubResource("Animation_yho3y"),
"death_anim": SubResource("Animation_fkxyn"),
"rotor": SubResource("Animation_2eb17")
}

[sub_resource type="Gradient" id="Gradient_eymlk"]
offsets = PackedFloat32Array(0, 0.15, 1)
colors = PackedColorArray(0.32549, 0, 0, 1, 0.32549, 0, 0, 1, 0.999657, 0.125947, 0.0876117, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sif7m"]
gradient = SubResource("Gradient_eymlk")
width = 100
height = 8

[sub_resource type="Animation" id="Animation_duhbn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hud_player/heat_level:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_55fvt"]
resource_name = "overheat_weapon"
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hud_player/heat_level:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wxt3r"]
_data = {
"RESET": SubResource("Animation_duhbn"),
"overheat_weapon": SubResource("Animation_55fvt")
}

[sub_resource type="Curve" id="Curve_72eys"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.117978, 81.3187), 601.86, 601.86, 0, 0, Vector2(0.292135, 164.835), 253.135, 253.135, 0, 0, Vector2(0.983146, 200), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Curve" id="Curve_cnauy"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.117978, 81.3187), 601.86, 601.86, 0, 0, Vector2(0.292135, 164.835), 253.135, 253.135, 0, 0, Vector2(0.983146, 200), 0.0, 0.0, 0, 0]
point_count = 4

[node name="player" type="CharacterBody2D"]
z_index = 4
collision_mask = 402
script = ExtResource("1_8wmr0")
bullet_scene = ExtResource("2_fvypt")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="cockpit_sprite" type="Sprite2D" parent="."]
scale = Vector2(0.304688, 0.304688)
texture = ExtResource("5_eb245")

[node name="shadow" type="Sprite2D" parent="cockpit_sprite"]
modulate = Color(1, 1, 1, 0.580392)
position = Vector2(-39.3846, 22.9743)
texture = ExtResource("11_jcunq")
hframes = 3

[node name="weapon_double_sprite" type="Sprite2D" parent="cockpit_sprite"]
self_modulate = Color(0.294118, 0.294118, 0.294118, 1)
position = Vector2(0, -98.4614)
texture = ExtResource("4_7bnte")

[node name="weapon_sprite" type="Sprite2D" parent="cockpit_sprite"]
self_modulate = Color(0.295867, 0.295866, 0.295867, 1)
position = Vector2(0, -180.513)
texture = ExtResource("3_nww2b")

[node name="fire_sparkles" type="Node2D" parent="cockpit_sprite/weapon_sprite"]
position = Vector2(0, 81.968)
scale = Vector2(3.27871, 3.27871)

[node name="fire_sparkles_basic" type="Sprite2D" parent="cockpit_sprite/weapon_sprite/fire_sparkles"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(-1, -100)
rotation = 3.14159
scale = Vector2(0.33, 0.33)
texture = ExtResource("6_ba3k0")
flip_v = true
vframes = 3

[node name="fire_sparkles_left" type="Sprite2D" parent="cockpit_sprite/weapon_sprite/fire_sparkles"]
visible = false
position = Vector2(-29, -47)
rotation = 3.14159
scale = Vector2(0.33, 0.33)
texture = ExtResource("6_ba3k0")
flip_v = true
vframes = 3
frame = 2

[node name="fire_sparkles_right" type="Sprite2D" parent="cockpit_sprite/weapon_sprite/fire_sparkles"]
visible = false
position = Vector2(28, -49)
rotation = 3.14159
scale = Vector2(0.33, 0.33)
texture = ExtResource("6_ba3k0")
flip_v = true
vframes = 3
frame = 2

[node name="anim_smoke_fire_basic" type="AnimationPlayer" parent="cockpit_sprite/weapon_sprite/fire_sparkles"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_jvdsf")
}

[node name="anim_smoke_fire_left" type="AnimationPlayer" parent="cockpit_sprite/weapon_sprite/fire_sparkles"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_jvdsf")
}

[node name="anim_smoke_fire_right" type="AnimationPlayer" parent="cockpit_sprite/weapon_sprite/fire_sparkles"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_jvdsf")
}

[node name="targets" type="Node2D" parent="cockpit_sprite/weapon_sprite"]
position = Vector2(0, 75.411)
scale = Vector2(3.27871, 3.27871)

[node name="main_target" type="Marker2D" parent="cockpit_sprite/weapon_sprite/targets"]
position = Vector2(0, -94)
metadata/_edit_group_ = true

[node name="right_target" type="Marker2D" parent="cockpit_sprite/weapon_sprite/targets"]
position = Vector2(28.0001, -48.9836)
metadata/_edit_group_ = true

[node name="left_target" type="Marker2D" parent="cockpit_sprite/weapon_sprite/targets"]
position = Vector2(-27.9999, -48.9836)
metadata/_edit_group_ = true

[node name="cockpit_sprite" type="Sprite2D" parent="cockpit_sprite"]
modulate = Color(0.420264, 0.387211, 0.242713, 1)
texture = ExtResource("5_eb245")

[node name="rotor_sprite" type="Sprite2D" parent="cockpit_sprite"]
position = Vector2(-1.112e-20, -65.6409)
scale = Vector2(1.1, 1.1)
texture = ExtResource("5_thjcd")
offset = Vector2(0, 29.5082)

[node name="Smokes" type="Node2D" parent="cockpit_sprite"]
scale = Vector2(3.28205, 3.28205)

[node name="Smoke20" type="CPUParticles2D" parent="cockpit_sprite/Smokes"]
z_index = 5
position = Vector2(-1, 44)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("21_mf2bx")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_glqfr")

[node name="Smoke40" type="CPUParticles2D" parent="cockpit_sprite/Smokes"]
z_index = 5
position = Vector2(-6, -86)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("21_mf2bx")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_glqfr")

[node name="Smoke60" type="CPUParticles2D" parent="cockpit_sprite/Smokes"]
z_index = 5
position = Vector2(-18, -26)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("21_mf2bx")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_glqfr")

[node name="Smoke80" type="CPUParticles2D" parent="cockpit_sprite/Smokes"]
z_index = 5
position = Vector2(-19, 10)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("21_mf2bx")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_glqfr")

[node name="Death_Smoke" type="CPUParticles2D" parent="cockpit_sprite/Smokes"]
z_index = 5
position = Vector2(0, -57)
emitting = false
amount = 100
lifetime = 3.0
texture = ExtResource("21_mf2bx")
emission_shape = 1
emission_sphere_radius = 8.0
spread = 180.0
gravity = Vector2(2.08165e-12, -5)
linear_accel_min = 5.0
linear_accel_max = 10.0
radial_accel_min = 1.0
radial_accel_max = 1.0
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_glqfr")

[node name="col" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -93, -28, -74, -28, -7, -13, 2, -12, 44, -24, 44, -24, 61, -11, 96, 13, 96, 23, 57, 23, 44, 10, 44, 11, 3, 29, -8, 28, -73)

[node name="AnimatedSprite2D" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sip65")
}
autoplay = "rotor"
speed_scale = 2.0

[node name="hud_player" type="Node2D" parent="."]

[node name="life_level" type="Sprite2D" parent="hud_player"]
position = Vector2(-50, 110)
texture = SubResource("GradientTexture2D_sif7m")
centered = false

[node name="heat_level" type="TextureProgressBar" parent="hud_player"]
offset_left = -50.0
offset_top = 120.0
offset_right = 50.0
offset_bottom = 128.0
value = 50.0
nine_patch_stretch = true
texture_under = ExtResource("11_eru6p")
texture_progress = ExtResource("12_gquhs")

[node name="sound" type="Node" parent="."]

[node name="engine" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("11_pnbqh")
volume_db = -20.0
autoplay = true
bus = &"SFX"

[node name="overheat_gun" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("12_7ocwc")
volume_db = -15.0
bus = &"SFX"

[node name="shoot_gun_0" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("12_veq1j")
volume_db = -10.0
bus = &"SFX"

[node name="shoot_gun_1" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("13_vyeq7")
volume_db = -10.0
bus = &"SFX"

[node name="shoot_gun_2" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("14_ewecj")
volume_db = -10.0
bus = &"SFX"

[node name="shoot_gun_3" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource("15_qd2uk")
volume_db = -10.0
bus = &"SFX"

[node name="anim_weapon" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wxt3r")
}

[node name="target_follow" type="Marker2D" parent="."]
position = Vector2(0, -40)

[node name="Explosion" parent="." instance=ExtResource("20_lfnj5")]
z_index = 5
amount = 700
lifetime = 2.0
linear_accel_curve = SubResource("Curve_72eys")
radial_accel_curve = SubResource("Curve_cnauy")

[node name="explosion_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_wmpp0")
bus = &"SFX"
